Removed unnecessary top margin from the Laps component as the StopWatch component's grid layout already has row spacing.

--- a/src/components/laps/Laps.module.scss
+++ b/src/components/laps/Laps.module.scss
@@ -12,8 +12,6 @@
 
   width: 100%;
 
-  margin-top: 1em;
-
   counter-reset: lap;
 }
 
